# image_processor

./: CMakeLists.txt  image_processor.cpp  interface.cpp  interface.h
bmp_utilities/: bmp_reader.cpp  bmp_reader.h  bmp_writer.cpp  bmp_writer.h  picture.cpp  picture.h
filters/: blur.cpp  blur.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.cpp  filter.h  fisheye.cpp  fisheye.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
